# AI-Research-Agent-

./: .gitignore  README.md  api.py  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  script.js  style.css
frontend/: script.js
src/: agent.py  assistant.py  document_loader.py  index.py  rag.py  tools.py  vector_store.py
